--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=RpaSuiteDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "SqlServerLogs": "Server=(localdb)\\MSSQLLocalDB;Database=RpaSuiteHangfire;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
